[gd_scene load_steps=14 format=3 uid="uid://gyatbi4olwyk"]

[ext_resource type="Texture2D" uid="uid://dcovbekxei4d0" path="res://pictures/Background.png" id="1_3pjex"]
[ext_resource type="Script" path="res://addons/sprite_cutter/AtlasScene.gd" id="2_1rp5h"]
[ext_resource type="Texture2D" uid="uid://cwgvf2ycnqjla" path="res://pictures/Room5.png" id="3_wm4k0"]
[ext_resource type="PackedScene" uid="uid://tnm1nobg8j45" path="res://scenes/player.tscn" id="4_wqnv6"]
[ext_resource type="FontFile" uid="uid://bby4ub4ge7pct" path="res://Pixel Times Bold.ttf" id="5_ic01m"]
[ext_resource type="Script" path="res://scripts/door_act_2_3.gd" id="6_0ix8x"]
[ext_resource type="Script" path="res://scripts/photograph.gd" id="7_2obrb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tebbj"]
size = Vector2(786, 73.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4cdb8"]
size = Vector2(32, 589.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p6jkw"]
size = Vector2(898, 36.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p2856"]
size = Vector2(76, 85)

[sub_resource type="CircleShape2D" id="CircleShape2D_xy12t"]
radius = 91.0494

[sub_resource type="CircleShape2D" id="CircleShape2D_86cqb"]
radius = 70.0071

[node name="Act2_3" type="Node2D"]

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.639216)
position = Vector2(949, 530.5)
scale = Vector2(0.803333, 0.904167)
texture = ExtResource("1_3pjex")

[node name="AtlasScene" type="Node" parent="."]
script = ExtResource("2_1rp5h")

[node name="Sprite2D" type="Sprite2D" parent="AtlasScene"]
position = Vector2(962.5, 544)
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_wm4k0")

[node name="CharacterBody2D" parent="." instance=ExtResource("4_wqnv6")]
z_index = 1
position = Vector2(1319, 550)
scale = Vector2(0.9, 0.9)
collision_layer = 31

[node name="TextBubble" type="Label" parent="CharacterBody2D"]
offset_left = 32.0
offset_top = -178.0
offset_right = 410.0
offset_bottom = -94.0
theme_override_fonts/font = ExtResource("5_ic01m")
theme_override_font_sizes/font_size = 20
autowrap_mode = 2
visible_characters = 0
visible_ratio = 0.0
metadata/_edit_use_anchors_ = true

[node name="BackBubble" type="ColorRect" parent="CharacterBody2D/TextBubble"]
visible = false
show_behind_parent = true
layout_mode = 0
offset_right = 324.0
offset_bottom = 65.0
color = Color(0.466667, 0.466667, 0.466667, 0.721569)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
z_index = 1
position = Vector2(973, 314.25)
shape = SubResource("RectangleShape2D_tebbj")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
z_index = 1
position = Vector2(534, 637.25)
shape = SubResource("RectangleShape2D_4cdb8")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
z_index = 1
position = Vector2(1397, 644)
shape = SubResource("RectangleShape2D_4cdb8")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
z_index = 1
position = Vector2(962, 953.25)
shape = SubResource("RectangleShape2D_p6jkw")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="StaticBody2D"]
z_index = 1
position = Vector2(1277, 852)
shape = SubResource("RectangleShape2D_p2856")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2
script = ExtResource("6_0ix8x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
z_index = 1
position = Vector2(1396, 598)
shape = SubResource("CircleShape2D_xy12t")

[node name="Area2D2" type="Area2D" parent="."]
z_index = 1
collision_mask = 8
script = ExtResource("7_2obrb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(643, 374)
shape = SubResource("CircleShape2D_86cqb")

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_body_exited"]
[connection signal="body_entered" from="Area2D2" to="Area2D2" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D2" to="Area2D2" method="_on_body_exited"]
